--- a/src/pages/About/About.module.css
+++ b/src/pages/About/About.module.css
@@ -8,10 +8,6 @@
   justify-content: center;
 }
 
-* {
-  border: 1px solid red;
-}
-
 /* Text content */
 .textContent {
   width: 100%;
